--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,7 @@
-
-# ===============================
-# = DATA SOURCE
-# ===============================
-
-# Set here configurations for the database connection
-
-# Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://localhost:3306/test_employee?useSSL=false
-
-# Username and password
-spring.datasource.username = root
-spring.datasource.password = root
-
-# Keep the connection alive if idle for a long time (needed in production)
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
-
-# ===============================
-# = JPA / HIBERNATE
-# ===============================
-
-# Use spring.jpa.properties.* for Hibernate native properties (the prefix is
-# stripped before adding them to the entity manager).
-
-# Show or not log for each sql query
-spring.jpa.show-sql = true
-
-# Hibernate ddl auto (create, create-drop, update): with "update" the database
-# schema will be automatically updated accordingly to java entities found in
-# the project
-spring.jpa.hibernate.ddl-auto = update
-
-# Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-
-# Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:h2:mem:TEST;DB_CLOSE_DELAY=-1;
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.platform=h2
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
